# katapult

./: README.md
backend/: main.py  voltage_control.py
backend-esp32/: .gitignore  Cargo.toml  README.md  espflash.toml  flash.sh  sdkconfig.defaults
backend-esp32/.cargo/: config.toml
backend-esp32/src/: main.rs  server.rs  servo.rs  state.rs
frontend/: bun.lockb  eslint.config.js  package.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/ui/: button.tsx  hover-card.tsx  radio-group.tsx  select.tsx  switch.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
