[package]
name = "catapult"
version = "0.1.0"
authors = ["94726 <maik.s.kowol@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "catapult"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync", "alloc", "experimental"] }
anyhow = "1.0.97"
esp-idf-hal = "0.45.2"
embedded-svc = "0.28.1"
esp-idf-sys = "0.36.1"
serde_json = "1.0.140"
heapless = "0.8.0"
serde = "1.0.219"

[build-dependencies]
embuild = "0.33"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "1.19.1" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }



